--- a/sv_se.properties
+++ b/sv_se.properties
@@ -1,64 +1,64 @@
-﻿language.name=English
-language.region=United States
-language.code=en_us
+﻿language.name=Svenska
+language.region=Sverige
+language.code=sv_se
 
-feedback.invalid.number=§cInvalid number!
-feedback.cancelled=§6Cancelled!
-feedback.success=§6Success!
+feedback.invalid.number=§cOgiltigt nummer!
+feedback.cancelled=§6Avbruten!
+feedback.success=§6Lyckades!
 feedback.empty=§r
-feedback.only.players=§cOnly players can use this command!
-feedback.noPermission=§cYou don't have permission to do that!
-feedback.command.notAllowed=§cYou are not allowed to use that command!
-feedback.unknownPlayer=§cUnknown player!
-feedback.sending.to.server=§9[Games]§f Sending you to %s.
-feedback.usage=§6Usage:
+feedback.only.players=§cEndast spelare kan använda detta kommando!
+feedback.noPermission=§cDu har inte behörighet att göra detta!
+feedback.command.notAllowed=§cDu får inte använda detta kommando!
+feedback.unknownPlayer=§cOkänd spelare!
+feedback.sending.to.server=§9[Spel]§f Skickar dig till %s.
+feedback.usage=§6Användning:
 
-feedback.word.combatLog=Combat Log
-feedback.word.end=End
-feedback.word.health=Health
-feedback.word.hearts=hearts
-feedback.word.before=Before
-feedback.word.after=After
-feedback.word.statistics=Statistics
-feedback.word.with=with
-feedback.word.by=by
-feedback.word.wasHurtFor=was hurt for
-feedback.word.change.weather=change the weather
-feedback.word.emeralds=Emeralds
-feedback.word.win=Win
-feedback.word.tie=Tie
-feedback.word.voted=Voted
-feedback.word.voted.exclamation=Voted!
+feedback.word.combatLog=Strids Logg
+feedback.word.end=Slut
+feedback.word.health=Hälsa
+feedback.word.hearts=Hjärtan
+feedback.word.before=Före
+feedback.word.after=Efter
+feedback.word.statistics=Statistik
+feedback.word.with=med
+feedback.word.by=av
+feedback.word.wasHurtFor=blev skadad för 
+feedback.word.change.weather=ändra vädret
+feedback.word.emeralds=Smaragder
+feedback.word.win=Vinn
+feedback.word.tie=Lika poäng
+feedback.word.voted=Röstade
+feedback.word.voted.exclamation=Röstade!
 
-error.invalid.slot.item=§cError: Invalid %s item!
+error.invalid.slot.item=§cError: Ogiltigt %s föremål!
 
-slot.head=Helmet
-slot.body=Body
-slot.legs=Legs
-slot.feet=Boots
-slot.hand.main.item=Item in Hand
-slot.hand.off.item=Item in Offhand
-slot.name=Name
+slot.head=Hjälm
+slot.body=Kropp
+slot.legs=Ben
+slot.feet=Skor
+slot.hand.main.item=Föremål i Hand
+slot.hand.off.item=Föremål i Andra
+slot.name=Namn
 
-example.message.colour.line1=§6Type the name that you would like the entity to have.
-example.message.colour.line2=§6You can use colour coding.
-example.message.colour.line3=§6Example: '&cBob'.
+example.message.colour.line1=§6Skriv det namn du vill att entiteten ska ha.
+example.message.colour.line2=§6Du kan använda färgkoder.
+example.message.colour.line3=§6Exempel: '&cBob'.
 
-plot.error.you.no.plot=§c You don't have a plot. You can load it with '/plot home'.
-plot.error.player.no.plot=§c %s doesn't have a plot.
-plot.error.no.owner=§c This plot has no owner.
-plot.error.no.plot.found=§c No plot found.
-plot.error.no.plot.world=§c This is not a plot world.
-plot.error.that.not.plot.world=§c That world is not a plot world or does not exist.
-plot.error.you.notAllowedTo.thisPlot=§c You are not allowed to %s on this plot.
+plot.error.you.no.plot=§c Do har ingen tomt. Do kan ladda den med '/plot home'.
+plot.error.player.no.plot=§c %s har ingen tomt.
+plot.error.no.owner=§c Denna tomt har ingen ägare.
+plot.error.no.plot.found=§c Ingen tomt hittad.
+plot.error.no.plot.world=§c Det här är ingen tomt-värld.
+plot.error.that.not.plot.world=§c Det här är ingen tomt-värld eller existerar inte.
+plot.error.you.notAllowedTo.thisPlot=§c Du får inte %s på denna tomt.
 
-gui.button.word.set=§6Set
+gui.button.word.set=§6Bestäm
 
 game.prefix.buildswap=§9[BuildSwap]
-game.prefix.creative=§9[Creative]
-game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
-game.compass.usage=§fClick with the compass to spectate the players.
+game.prefix.creative=§9[Kreativ]
+game.alreadyStarted.spectator=§f Spelet har redan startat, så du sattes i åskådarläge.
+game.compass.usage=§fKlicka med kompassen för att åskåda spelare.
 
-buildswap.opponentLeft=§fYour opponent left the game! We are looking for another partner. Sit tight!
-buildswap.feedback.cannotVote.spectator=Spectators aren't allowed to vote!
-buildswap.feedback.cannotVote.side=You are not allowed to vote for this side!
+buildswap.opponentLeft=§fDin motspelare lämnade spelet! Vi letar efter en annan partner. Håll kvar!
+buildswap.feedback.cannotVote.spectator=Åskådare får inte rösta!
+buildswap.feedback.cannotVote.side=Du får inte rösta på denna sida!
