--- a/sv_se.properties
+++ b/sv_se.properties
@@ -25,12 +25,12 @@ feedback.word.by=av
 feedback.word.wasHurtFor=blev skadad för 
 feedback.word.change.weather=ändra vädret
 feedback.word.emeralds=Smaragder
-feedback.word.win=Vinn
+feedback.word.win=Vinst
 feedback.word.tie=Lika poäng
 feedback.word.voted=Röstade
 feedback.word.voted.exclamation=Röstade!
 
-error.invalid.slot.item=§cError: Ogiltigt %s föremål!
+error.invalid.slot.item=§cFel: Ogiltigt %s föremål!
 
 slot.head=Hjälm
 slot.body=Kropp
