--- a/sv_se.properties
+++ b/sv_se.properties
@@ -22,7 +22,7 @@ feedback.word.after=Efter
 feedback.word.statistics=Statistik
 feedback.word.with=med
 feedback.word.by=av
-feedback.word.wasHurtFor=blev skadad för 
+feedback.word.wasHurtFor=skadades 
 feedback.word.change.weather=ändra vädret
 feedback.word.emeralds=Smaragder
 feedback.word.win=Vinst
@@ -44,7 +44,7 @@ example.message.colour.line1=§6Skriv det namn du vill att entiteten ska ha.
 example.message.colour.line2=§6Du kan använda färgkoder.
 example.message.colour.line3=§6Exempel: '&cBob'.
 
-plot.error.you.no.plot=§c Do har ingen tomt. Do kan ladda den med '/plot home'.
+plot.error.you.no.plot=§c Du har ingen tomt. Du kan ladda den med '/plot home'.
 plot.error.player.no.plot=§c %s har ingen tomt.
 plot.error.no.owner=§c Denna tomt har ingen ägare.
 plot.error.no.plot.found=§c Ingen tomt hittad.
