--- a/pl_pl.properties
+++ b/pl_pl.properties
@@ -1,64 +1,64 @@
-﻿language.name=English
-language.region=United States
-language.code=en_us
+﻿language.name=Polski
+language.region=Polska
+language.code=pl_pl
 
-feedback.invalid.number=§cInvalid number!
-feedback.cancelled=§6Cancelled!
-feedback.success=§6Success!
+feedback.invalid.number=§cNieprawidłowy numer!
+feedback.cancelled=§6Odwołane!
+feedback.success=§6Sukces!
 feedback.empty=§r
-feedback.only.players=§cOnly players can use this command!
-feedback.noPermission=§cYou don't have permission to do that!
-feedback.command.notAllowed=§cYou are not allowed to use that command!
-feedback.unknownPlayer=§cUnknown player!
-feedback.sending.to.server=§9[Games]§f Sending you to %s.
-feedback.usage=§6Usage:
+feedback.only.players=§cTylko gracze mogą używać tej komendy!
+feedback.noPermission=§cNie masz pozwolenia aby to zrobić!
+feedback.command.notAllowed=§cNie wolno ci używać tej komendy!
+feedback.unknownPlayer=§cNieznany gracz!
+feedback.sending.to.server=§9[Games]§f Jesteś przenoszony do %s.
+feedback.usage=§6Użytek:
 
-feedback.word.combatLog=Combat Log
-feedback.word.end=End
-feedback.word.health=Health
-feedback.word.hearts=hearts
-feedback.word.before=Before
-feedback.word.after=After
-feedback.word.statistics=Statistics
-feedback.word.with=with
-feedback.word.by=by
-feedback.word.wasHurtFor=was hurt for
-feedback.word.change.weather=change the weather
-feedback.word.emeralds=Emeralds
-feedback.word.win=Win
-feedback.word.tie=Tie
-feedback.word.voted=Voted
-feedback.word.voted.exclamation=Voted!
+feedback.word.combatLog=Log Bitwy
+feedback.word.end=Koniec
+feedback.word.health=Życie
+feedback.word.hearts=Serca
+feedback.word.before=Przed
+feedback.word.after=Po
+feedback.word.statistics=Statystyki
+feedback.word.with=z
+feedback.word.by=przez
+feedback.word.wasHurtFor=został zraniony za
+feedback.word.change.weather=zmieniać pogody
+feedback.word.emeralds=Szmaragdy
+feedback.word.win=Wygrana
+feedback.word.tie=Remis
+feedback.word.voted=Zagłosowano
+feedback.word.voted.exclamation=Zagłosowano!
 
-error.invalid.slot.item=§cError: Invalid %s item!
+error.invalid.slot.item=§cError: Nieprawidłowy %s przedmiot!
 
-slot.head=Helmet
-slot.body=Body
-slot.legs=Legs
-slot.feet=Boots
-slot.hand.main.item=Item in Hand
-slot.hand.off.item=Item in Offhand
-slot.name=Name
+slot.head=Hełm
+slot.body=Ciało
+slot.legs=Nogi
+slot.feet=Buty
+slot.hand.main.item=Przedmiot w Ręce
+slot.hand.off.item=Przedmiot w Drugiej Ręce
+slot.name=Imie
 
-example.message.colour.line1=§6Type the name that you would like the entity to have.
-example.message.colour.line2=§6You can use colour coding.
-example.message.colour.line3=§6Example: '&cBob'.
+example.message.colour.line1=§6Wpisz imie które chcesz nadać tej jednostce.
+example.message.colour.line2=§6Możesz używać kodowania barwnego.
+example.message.colour.line3=§6Na przykład: '&cBob'.
 
-plot.error.you.no.plot=§c You don't have a plot. You can load it with '/plot home'.
-plot.error.player.no.plot=§c %s doesn't have a plot.
-plot.error.no.owner=§c This plot has no owner.
-plot.error.no.plot.found=§c No plot found.
-plot.error.no.plot.world=§c This is not a plot world.
-plot.error.that.not.plot.world=§c That world is not a plot world or does not exist.
-plot.error.you.notAllowedTo.thisPlot=§c You are not allowed to %s on this plot.
+plot.error.you.no.plot=§c Nie posiadasz działki. Możesz ją załadować używając '/plot home'.
+plot.error.player.no.plot=§c %s nie posiada działki.
+plot.error.no.owner=§c Ta działka nie ma właściciela.
+plot.error.no.plot.found=§c Nie znaleziono działki.
+plot.error.no.plot.world=§c Ten świat nie ma działek.
+plot.error.that.not.plot.world=§c Tamten świat nie ma działek albo nie istnieje.
+plot.error.you.notAllowedTo.thisPlot=§c Nie wolno ci %s na tej działce.
 
-gui.button.word.set=§6Set
+gui.button.word.set=§6Ustaw
 
 game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
-game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
-game.compass.usage=§fClick with the compass to spectate the players.
+game.alreadyStarted.spectator=§f Ta gra już się rozpoczeła, więc zostałeś przeniesiony na tryb obserwatora.
+game.compass.usage=§fKliknij kompasem, aby obserwować graczy.
 
-buildswap.opponentLeft=§fYour opponent left the game! We are looking for another partner. Sit tight!
-buildswap.feedback.cannotVote.spectator=Spectators aren't allowed to vote!
-buildswap.feedback.cannotVote.side=You are not allowed to vote for this side!
+buildswap.opponentLeft=§fTwój przeciwnik opuścił grę! Szukamy następnego partnera. Proszę poczekać!
+buildswap.feedback.cannotVote.spectator=Obserwatorzy nie mogą głosować!
+buildswap.feedback.cannotVote.side=Nie wolno ci głosować za tą stroną!
