--- a/hr_hr.properties
+++ b/hr_hr.properties
@@ -29,6 +29,13 @@ feedback.word.win=Pobjeda
 feedback.word.tie=Neriješeno
 feedback.word.voted=Glasovao
 feedback.word.voted.exclamation=Glasovao!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Reward Summary
+feedback.word.gameEnded=The game has ended!
+feedback.word.youHaveEarned=You've earned
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Players
 
 error.invalid.slot.item=§cGreška: Nevažeći %s predmet!
 slot.head=Kaciga
@@ -57,7 +64,3 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Igra je već započela, zato ste stavljeni u promatrački način.
 game.compass.usage=§fKliknite sa kompasom da biste promatrali igrača
-
-buildswap.opponentLeft=§fVaš protivnik je napustio igru! Tražimo novog protivnika. Držite se čvrsto!
-buildswap.feedback.cannotVote.spectator=Promatrači ne smiju glasati!
-buildswap.feedback.cannotVote.side=Ne smijete glasati za ovu stranu!
