--- a/nl_nl.properties
+++ b/nl_nl.properties
@@ -29,6 +29,13 @@ feedback.word.win=Gewonnen
 feedback.word.tie=Gelijkspel
 feedback.word.voted=Gestemd
 feedback.word.voted.exclamation=Gestemd!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Reward Summary
+feedback.word.gameEnded=The game has ended!
+feedback.word.youHaveEarned=You've earned
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Players
 
 error.invalid.slot.item=§cError: Ongeldig %s voorwerp!
 
@@ -58,7 +65,3 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Het spel is al gestart, dus je bent in toeschouwersmodus gezet.
 game.compass.usage=§fKlik met het kompas om naar spelers te teleporteren.
-
-buildswap.opponentLeft=§fJe tegenstander heeft het spel verlaten! We zoeken naar een andere partner. Even geduld!
-buildswap.feedback.cannotVote.spectator=Toeschouwers mogen niet stemmen!
-buildswap.feedback.cannotVote.side=Je mag niet stemmen voor deze kant!
