--- a/pl_pl.properties
+++ b/pl_pl.properties
@@ -29,6 +29,13 @@ feedback.word.win=Wygrana
 feedback.word.tie=Remis
 feedback.word.voted=Zagłosowano
 feedback.word.voted.exclamation=Zagłosowano!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Reward Summary
+feedback.word.gameEnded=The game has ended!
+feedback.word.youHaveEarned=You've earned
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Players
 
 error.invalid.slot.item=§cError: Nieprawidłowy %s przedmiot!
 
@@ -58,7 +65,3 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Ta gra już się rozpoczeła, więc zostałeś przeniesiony na tryb obserwatora.
 game.compass.usage=§fKliknij kompasem, aby obserwować graczy.
-
-buildswap.opponentLeft=§fTwój przeciwnik opuścił grę! Szukamy następnego partnera. Proszę poczekać!
-buildswap.feedback.cannotVote.spectator=Obserwatorzy nie mogą głosować!
-buildswap.feedback.cannotVote.side=Nie wolno ci głosować za tą stroną!
