--- a/pt_br.properties
+++ b/pt_br.properties
@@ -29,6 +29,13 @@ feedback.word.win=Win
 feedback.word.tie=Tie
 feedback.word.voted=Voted
 feedback.word.voted.exclamation=Voted!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Reward Summary
+feedback.word.gameEnded=The game has ended!
+feedback.word.youHaveEarned=You've earned
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Players
 
 error.invalid.slot.item=§cError: Invalid %s item!
 
@@ -58,7 +65,3 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
 game.compass.usage=§fClick with the compass to spectate the players.
-
-buildswap.opponentLeft=§fYour opponent left the game! We are looking for another partner. Sit tight!
-buildswap.feedback.cannotVote.spectator=Spectators aren't allowed to vote!
-buildswap.feedback.cannotVote.side=You are not allowed to vote for this side!
