--- a/sv_se.properties
+++ b/sv_se.properties
@@ -29,6 +29,13 @@ feedback.word.win=Vinst
 feedback.word.tie=Lika poäng
 feedback.word.voted=Röstade
 feedback.word.voted.exclamation=Röstade!
+feedback.word.ago=ago
+feedback.word.rewardSummary=Reward Summary
+feedback.word.gameEnded=The game has ended!
+feedback.word.youHaveEarned=You've earned
+feedback.word.winner=Winner
+feedback.word.winners=Winners
+feedback.word.players=Players
 
 error.invalid.slot.item=§cFel: Ogiltigt %s föremål!
 
@@ -58,7 +65,3 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Kreativ]
 game.alreadyStarted.spectator=§f Spelet har redan startat, så du sattes i åskådarläge.
 game.compass.usage=§fKlicka med kompassen för att åskåda spelare.
-
-buildswap.opponentLeft=§fDin motspelare lämnade spelet! Vi letar efter en annan partner. Håll kvar!
-buildswap.feedback.cannotVote.spectator=Åskådare får inte rösta!
-buildswap.feedback.cannotVote.side=Du får inte rösta på denna sida!
