--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -29,3 +29,102 @@ buildswap.scoreboard.generatingTheme=Genereren...
 buildswap.scoreboard.timeRemaining=Tijd over
 buildswap.scoreboard.swap=Wissel!
 buildswap.scoreboard.hurry=Schiet op!
+
+theme.angel=Een engel
+theme.axe=Een bijl
+theme.baby=Een baby
+theme.grian=Grian
+theme.bee=Een bij
+theme.bicycle=Een fiets
+theme.boat=Een boat
+theme.heart=Een hart
+theme.book=Een boek
+theme.boy=Een jongen
+theme.bread=Een sneetje brood
+theme.bunny=Een konijn
+theme.bus=Een bus
+theme.butterfly=Een vlinder
+theme.car=Een auto
+theme.castle=Een kasteel
+theme.cat=Een kat
+theme.chair=Een stoel
+theme.cheese=Een kaas
+theme.chocolate=Een stukje chocola
+theme.clock=Een klok
+theme.coffee=Een kop koffie
+theme.computer=Een computer
+theme.cookie=Een koekje
+theme.cow=Een koe
+theme.creeper=Een creeper
+theme.crocodile=Een krokodil
+theme.cupcake=Een cupcake
+theme.diamond=Een diamant
+theme.dog=Een hond
+theme.dolphin=Een dolfijn
+theme.donut=Een donut
+theme.dragonfly=Een libelle
+theme.egg=Een ei
+theme.enderman=Een enderman
+theme.firetruck=Een brandweerwagen
+theme.fireman=Een brandweerman
+theme.fish=Een vis
+theme.fridge=Een koelkast
+theme.furnace=Een oven
+theme.ghast=Een ghast
+theme.giant=Een reus
+theme.alien=Een alien
+theme.girl=Een meisje
+theme.hotdog=Een hotdog
+theme.house=Een huis
+theme.jar=Een pot
+theme.jellyfish=Een kwal
+theme.jukebox=Een jukebox
+theme.key=Een sleutel
+theme.koala=Een koala
+theme.lamb=Een lam
+theme.llama=Een lama
+theme.mermaid=Een zeemeermin
+theme.monkey=Een aap
+theme.mouse=Een muis
+theme.mushroom=Een paddestoel
+theme.painting=Een schilderij
+theme.pan=Een pan
+theme.panda=Een panda
+theme.paper=Papier
+theme.penguin=Een pinguïn
+theme.pizza=Een pizza
+theme.planet=Een planet
+theme.plate=Een bord
+theme.policeman=Een agent
+theme.pony=Een pony
+theme.potato=Een aardappel
+theme.present=Een cadeautje
+theme.radio=Een radio
+theme.rusticHouse=Een rustiek huis
+theme.scissors=Een schaar
+theme.shoe=Een schoen
+theme.shovel=Een schep
+theme.skeleton=Een skelet
+theme.snake=Een slang
+theme.snowflake=Een sneeuwvlok
+theme.snowman=Een sneeuwman
+theme.spider=Een spin
+theme.squid=Een inktvis
+theme.star=Een star
+theme.stone=Een steen
+theme.stove=Een fornuis
+theme.sushi=Sushi
+theme.sword=Een zwaard
+theme.train=Een trein
+theme.tree=Een boom
+theme.truck=Een truck
+theme.trumpet=Een trompet
+theme.turtle=Een schildpad
+theme.whale=Een walvis
+theme.witch=Een heks
+theme.wizard=Een tovenaar
+theme.zebra=Een zebra
+theme.zombie=Een zombie
+theme.oven=Een oven
+theme.umbrella=Een paraplu
+theme.unicorn=Een eenhoorn
