--- a/BuildSwap/pl_pl.properties
+++ b/BuildSwap/pl_pl.properties
@@ -29,3 +29,102 @@ buildswap.scoreboard.generatingTheme=Generating...
 buildswap.scoreboard.timeRemaining=Time remaining
 buildswap.scoreboard.swap=Swap to the other side!
 buildswap.scoreboard.hurry=Hurry!
+
+theme.angel=An angel
+theme.axe=An axe
+theme.baby=A baby
+theme.grian=Grian
+theme.bee=A bee
+theme.bicycle=A bicycle
+theme.boat=A boat
+theme.heart=A heart
+theme.book=A book
+theme.boy=A boy
+theme.bread=A loaf of bread
+theme.bunny=A bunny
+theme.bus=A bus
+theme.butterfly=A butterfly
+theme.car=A car
+theme.castle=A castle
+theme.cat=A cat
+theme.chair=A chair
+theme.cheese=A cheese
+theme.chocolate=A piece of chocolate
+theme.clock=A clock
+theme.coffee=A cup of coffee
+theme.computer=A computer
+theme.cookie=A cookie
+theme.cow=A cow
+theme.creeper=A creeper
+theme.crocodile=A crocodile
+theme.cupcake=A cupcake
+theme.diamond=A diamond
+theme.dog=A dog
+theme.dolphin=A dolphin
+theme.donut=A donut
+theme.dragonfly=A dragonfly
+theme.egg=An egg
+theme.enderman=An enderman
+theme.firetruck=A firetruck
+theme.fireman=A fireman
+theme.fish=A fish
+theme.fridge=A fridge
+theme.furnace=A furnace
+theme.ghast=A ghast
+theme.giant=A giant
+theme.alien=An alien
+theme.girl=A girl
+theme.hotdog=A hotdog
+theme.house=A house
+theme.jar=A jar
+theme.jellyfish=A jellyfish
+theme.jukebox=A jukebox
+theme.key=A key
+theme.koala=A koala
+theme.lamb=A lamb
+theme.llama=A llama
+theme.mermaid=A mermaid
+theme.monkey=A monkey
+theme.mouse=A mouse
+theme.mushroom=A mushroom
+theme.painting=A painting
+theme.pan=A pan
+theme.panda=A panda
+theme.paper=A paper
+theme.penguin=A penguin
+theme.pizza=A pizza
+theme.planet=A planet
+theme.plate=A plate
+theme.policeman=A policeman
+theme.pony=A pony
+theme.potato=A potato
+theme.present=A present
+theme.radio=A radio
+theme.rusticHouse=A rustic house
+theme.scissors=A pair of scissors
+theme.shoe=A shoe
+theme.shovel=A shovel
+theme.skeleton=A skeleton
+theme.snake=A snake
+theme.snowflake=A snowflake
+theme.snowman=A snowman
+theme.spider=A spider
+theme.squid=A squid
+theme.star=A star
+theme.stone=A stone
+theme.stove=A stove
+theme.sushi=Sushi
+theme.sword=A sword
+theme.train=A train
+theme.tree=A tree
+theme.truck=A truck
+theme.trumpet=A trumpet
+theme.turtle=A turtle
+theme.whale=A whale
+theme.witch=A witch
+theme.wizard=A wizard
+theme.zebra=A zebra
+theme.zombie=A zombie
+theme.oven=An oven
+theme.umbrella=An umbrella
+theme.unicorn=A unicorn
