--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -128,3 +128,47 @@ theme.zombie=Een zombie
 theme.oven=Een oven
 theme.umbrella=Een paraplu
 theme.unicorn=Een eenhoorn
+
+theme2.babyBottle=met een baby fles in de hand
+theme2.balloon=met een ballon
+theme2.belt=met een riem om
+theme2.book=met een boek
+theme2.bottle=met een fles
+theme2.candle=met een kaars in de hand
+theme2.cape=met een cape om
+theme2.cookie=met een koekje
+theme2.earphones=met oordopjes in de oren
+theme2.earrings=met oorbellen
+theme2.rod=aan het vissen met een hengel
+theme2.flag=met een vlag
+theme2.flower=met een bloem
+theme2.console=aan het gamen op een spelcomputer
+theme2.glass=met een glas
+theme2.hat=met een hoed op het hoofd
+theme2.headphones=met een koptelefoon op
+theme2.heaven=in de hemel
+theme2.cream=met een ijsje
+theme2.laptop=met een laptop
+theme2.microphone=zingend in een microfoon
+theme2.mug=met een mok
+theme2.necklace=met een ketting om
+theme2.notebook=met een notebook/notitieblokje
+theme2.npc-grian=met NPC-Grian
+theme2.phone=met een telefoon
+theme2.popcorn=met popcorn
+theme2.puppy=knuffelend met een puppy
+theme2.purse=met een damestas om de arm
+theme2.channels=al zappende
+theme2.tortoise=getrouwd met een schildpad
+theme2.rollerskates=op rolschaatsen
+theme2.sandwich=met een sandwich
+theme2.shoes=met schoenen aan de voeten
+theme2.sombrero=met een sombrero op
+theme2.sunglasses=met een zonnebril op
+theme2.sweater=met een trui aan
+theme2.bear=met een knuffelbeer
+theme2.teeth=met gekke tanden
+theme2.television=met een televisie
+theme2.wings=met vleugels
+theme2.arms=met veel armen
+theme2.dinosaur=met een gele dinosaurus
