--- a/BuildSwap/hr_hr.properties
+++ b/BuildSwap/hr_hr.properties
@@ -128,3 +128,47 @@ theme.zombie=A zombie
 theme.oven=An oven
 theme.umbrella=An umbrella
 theme.unicorn=A unicorn
+
+theme2.babyBottle=holding a baby bottle
+theme2.balloon=with a balloon
+theme2.belt=wearing a belt
+theme2.book=with a book
+theme2.bottle=with a bottle
+theme2.candle=holding a candle
+theme2.cape=wearing a cape
+theme2.cookie=with a cookie
+theme2.earphones=wearing earphones
+theme2.earrings=wearing earrings
+theme2.rod=holding a fishing rod
+theme2.flag=with a flag
+theme2.flower=with a flower
+theme2.console=playing on a game console
+theme2.glass=with a glass
+theme2.hat=wearing a hat
+theme2.headphones=with headphones
+theme2.heaven=in heaven
+theme2.cream=with ice cream
+theme2.laptop=with a laptop
+theme2.microphone=singing into a microphone
+theme2.mug=with a mug
+theme2.necklace=wearing a necklace
+theme2.notebook=with a notebook
+theme2.npc-grian=with NPC-Grian
+theme2.phone=with a phone
+theme2.popcorn=holding popcorn
+theme2.puppy=cuddling a puppy
+theme2.purse=wearing a purse
+theme2.channels=changing channels
+theme2.tortoise=married to a tortoise
+theme2.rollerskates=on rollerskates
+theme2.sandwich=with a sandwich
+theme2.shoes=wearing shoes
+theme2.sombrero=wearing a sombrero
+theme2.sunglasses=wearing sunglasses
+theme2.sweater=wearing a sweater
+theme2.bear=holding a teddy bear
+theme2.teeth=with silly teeth
+theme2.television=and a television
+theme2.wings=wearing wings
+theme2.arms=with many arms
+theme2.dinosaur=holding a yellow dinosaur
