Added themes for round 3

--- a/BuildSwap/de_de.properties
+++ b/BuildSwap/de_de.properties
@@ -172,3 +172,43 @@ theme2.television=and a television
 theme2.wings=wearing wings
 theme2.arms=with many arms
 theme2.dinosaur=holding a yellow dinosaur
+
+theme3.teeth=brushing their teeth
+theme3.camping=camping
+theme3.crying=crying
+theme3.drinking=drinking
+theme3.driving=driving
+theme3.eating=eating
+theme3.fighting=fighting
+theme3.fishing=fishing
+theme3.school=going to school
+theme3.skating=ice skating
+theme3.radio=listening to the radio
+theme3.telescope=looking through a telescope
+theme3.phonecall=making a phonecall
+theme3.mining=mining
+theme3.painting=painting
+theme3.dog=petting a dog
+theme3.make-up=putting on make-up
+theme3.book=reading a book
+theme3.singing=singing
+theme3.class=sitting in class
+theme3.sleeping=sleeping
+theme3.walking=walking
+theme3.waving=waving
+theme3.writing=writing
+theme3.dancing=dancing
+theme3.hill=rolling down a hill
+theme3.kitchen=in the kitchen
+theme3.laughing=laughing
+theme3.magic=performing magic
+theme3.internet=browsing the internet
+theme3.disasters=playing Disasters
+theme3.house=building a rustic house
+theme3.video=making a video
+theme3.potatoes=growing potatoes
+theme3.inventing=inventing
+theme3.science=performing science
+theme3.potions=brewing potions
+theme3.hair=brushing their hair
+theme3.trees=painting happy little trees
