--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -172,3 +172,43 @@ theme2.television=met een televisie
 theme2.wings=met vleugels
 theme2.arms=met veel armen
 theme2.dinosaur=met een gele dinosaurus
+
+theme3.teeth=aan het tandenpoetsen
+theme3.camping=aan het kamperen
+theme3.crying=aan het huilen
+theme3.drinking=aan het drinken
+theme3.driving=aan het rijden
+theme3.eating=aan het eten
+theme3.fighting=aan het vechten
+theme3.fishing=vissen
+theme3.school=opweg naar school
+theme3.skating=aan het schaatsen
+theme3.radio=luisterend naar de radio
+theme3.telescope=kijkend door een telescoop
+theme3.phonecall=aan het bellen
+theme3.mining=tijdens de mijnbouw
+theme3.painting=aan het schilderen
+theme3.dog=een hond aan het aaien
+theme3.make-up=zich op aan het maken
+theme3.book=een boek aan het lezen
+theme3.singing=aan het zingen
+theme3.class=in de klas zittend
+theme3.sleeping=aan het slapen
+theme3.walking=aan het lopen
+theme3.waving=aan het zwaaien
+theme3.writing=aan het schrijven
+theme3.dancing=aan het dansen
+theme3.hill=een heuvel af aan het rollen
+theme3.kitchen=in de keuken
+theme3.laughing=aan het lachen
+theme3.magic=aan het toveren
+theme3.internet=op het internet surfen
+theme3.disasters=Disasters aan het spelen
+theme3.house=een rustiek huis aan het bouwen
+theme3.video=een video aan het maken
+theme3.potatoes=aardappels aan het laten groeien
+theme3.inventing=aan het uitvinden
+theme3.science=bezig met de wetenschap
+theme3.potions=aan het drankjes brouwen
+theme3.hair=het haar aan het kammen
+theme3.trees=kleine blije bomen aan het tekenen
