--- a/BuildSwap/pt_br.properties
+++ b/BuildSwap/pt_br.properties
@@ -21,7 +21,7 @@ buildswap.round.secondsRemaining=seconds remaining
 buildswap.round.over=§cRound %s Over
 buildswap.game.end=§cGame ended!
 buildswap.voting.end=§cVoting finished!
-buildswap.voting.start=§cTime to vote!
+buildswap.voting.start=§c Hora de votar!
 buildswap.voting.start.info=§cClick any side to vote for it
 
 buildswap.scoreboard.currentTheme=Current theme
