Added you're playing on and fixed a Dutch thing

--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -40,7 +40,7 @@ theme.boat=Een boat
 theme.heart=Een hart
 theme.book=Een boek
 theme.boy=Een jongen
-theme.bread=Een sneetje brood
+theme.bread=Een brood
 theme.bunny=Een konijn
 theme.bus=Een bus
 theme.butterfly=Een vlinder
