--- a/en_us.properties
+++ b/en_us.properties
@@ -65,3 +65,5 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
 game.compass.usage=§fClick with the compass to spectate the players.
+
+game.scoreboard.playingOn=You're playing on
