--- a/hr_hr.properties
+++ b/hr_hr.properties
@@ -64,3 +64,5 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Igra je već započela, zato ste stavljeni u promatrački način.
 game.compass.usage=§fKliknite sa kompasom da biste promatrali igrača
+
+game.scoreboard.playingOn=You're playing on
