--- a/nl_nl.properties
+++ b/nl_nl.properties
@@ -65,3 +65,5 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Het spel is al gestart, dus je bent in toeschouwersmodus gezet.
 game.compass.usage=§fKlik met het kompas om naar spelers te teleporteren.
+
+game.scoreboard.playingOn=Je speelt op
