--- a/pl_pl.properties
+++ b/pl_pl.properties
@@ -65,3 +65,5 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f Ta gra już się rozpoczeła, więc zostałeś przeniesiony na tryb obserwatora.
 game.compass.usage=§fKliknij kompasem, aby obserwować graczy.
+
+game.scoreboard.playingOn=You're playing on
