--- a/sv_se.properties
+++ b/sv_se.properties
@@ -65,3 +65,5 @@ game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Kreativ]
 game.alreadyStarted.spectator=§f Spelet har redan startat, så du sattes i åskådarläge.
 game.compass.usage=§fKlicka med kompassen för att åskåda spelare.
+
+game.scoreboard.playingOn=You're playing on
