--- a/nl_nl.properties
+++ b/nl_nl.properties
@@ -24,12 +24,12 @@ feedback.word.with=met
 feedback.word.by=door
 feedback.word.wasHurtFor=was beschadigd voor
 feedback.word.change.weather=verander het weer
-feedback.word.emeralds=Smaragd
+feedback.word.emeralds=Smaragden
 feedback.word.win=Gewonnen
 feedback.word.tie=Gelijkspel
 feedback.word.voted=Gestemd
 feedback.word.voted.exclamation=Gestemd!
-feedback.word.ago=ago
+feedback.word.ago=geleden
 feedback.word.rewardSummary=Reward Summary
 feedback.word.gameEnded=The game has ended!
 feedback.word.youHaveEarned=You've earned
