Moved Voted! to BuildSwap and added white whitespace

--- a/BuildSwap/en_us.properties
+++ b/BuildSwap/en_us.properties
@@ -5,6 +5,7 @@ language.code=en_us
 buildswap.opponentLeft=§f Your opponent left the game! We are looking for another partner. Sit tight!
 buildswap.feedback.cannotVote.spectator=§f Spectators aren't allowed to vote!
 buildswap.feedback.cannotVote.side=§f You are not allowed to vote for this side!
+buildswap.feedback.voted=§f Voted!
 buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
 buildswap.feedback.foundPartner=§f We found you another partner!
 buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
