--- a/BuildSwap/hr_hr.properties
+++ b/BuildSwap/hr_hr.properties
@@ -5,6 +5,7 @@ language.code=hr_hr
 buildswap.opponentLeft=§fVaš protivnik je napustio igru! Tražimo novog protivnika. Držite se čvrsto!
 buildswap.feedback.cannotVote.spectator=Promatrači ne smiju glasati!
 buildswap.feedback.cannotVote.side=Ne smijete glasati za ovu stranu!
+buildswap.feedback.voted=§f Glasovao!
 buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
 buildswap.feedback.foundPartner=§f We found you another partner!
 buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
