--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -5,6 +5,7 @@ language.code=nl_nl
 buildswap.opponentLeft=§fJe tegenstander heeft het spel verlaten! We zoeken naar een andere partner. Even geduld!
 buildswap.feedback.cannotVote.spectator=Toeschouwers mogen niet stemmen!
 buildswap.feedback.cannotVote.side=Je mag niet stemmen voor deze kant!
+buildswap.feedback.voted=§f Gestemd!
 buildswap.feedback.foundPartnerNoTransfer=§f We hebben een partner voor je gevonden! Helaas kunnen we je bouwsel niet verplaatsen, dus heb je het bouwsel van een ander gekregen. Het is beter dan niets!
 buildswap.feedback.foundPartner=§f We hebben een partner voor je gevonden!
 buildswap.feedback.opponentsLeft=§f Je tegenstanders(s) zijn vertrokken, dus je bent in toeschouwermodus gezet.
