--- a/BuildSwap/pl_pl.properties
+++ b/BuildSwap/pl_pl.properties
@@ -5,6 +5,7 @@ language.code=pl_pl
 buildswap.opponentLeft=§fTwój przeciwnik opuścił grę! Szukamy następnego partnera. Proszę poczekać!
 buildswap.feedback.cannotVote.spectator=Obserwatorzy nie mogą głosować!
 buildswap.feedback.cannotVote.side=Nie wolno ci głosować za tą stroną!
+buildswap.feedback.voted=§f Zagłosowano!
 buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
 buildswap.feedback.foundPartner=§f We found you another partner!
 buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
