--- a/BuildSwap/sv_se.properties
+++ b/BuildSwap/sv_se.properties
@@ -5,6 +5,7 @@ language.code=sv_se
 buildswap.opponentLeft=§fDin motspelare lämnade spelet! Vi letar efter en annan partner. Håll kvar!
 buildswap.feedback.cannotVote.spectator=Åskådare får inte rösta!
 buildswap.feedback.cannotVote.side=Du får inte rösta på denna sida!
+buildswap.feedback.voted=§f Röstade!
 buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
 buildswap.feedback.foundPartner=§f We found you another partner!
 buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
