Fixed some more Dutch

--- a/nl_nl.properties
+++ b/nl_nl.properties
@@ -29,12 +29,12 @@ feedback.word.win=Gewonnen
 feedback.word.tie=Gelijkspel
 feedback.word.voted=Gestemd
 feedback.word.ago=geleden
-feedback.word.rewardSummary=Reward Summary
-feedback.word.gameEnded=The game has ended!
-feedback.word.youHaveEarned=You've earned
-feedback.word.winner=Winner
-feedback.word.winners=Winners
-feedback.word.players=Players
+feedback.word.rewardSummary=Belonings Samenvatting
+feedback.word.gameEnded=Het spel is over!
+feedback.word.youHaveEarned=Je verdiende
+feedback.word.winner=Winnaar
+feedback.word.winners=Winnaars
+feedback.word.players=Spelers
 
 error.invalid.slot.item=§cError: Ongeldig %s voorwerp!
 
