--- a/BuildSwap/pt_br.properties
+++ b/BuildSwap/pt_br.properties
@@ -2,213 +2,213 @@
 language.region=Brazil
 language.code=pt_br
 
-buildswap.opponentLeft=§fYour opponent left the game! We are looking for another partner. Sit tight!
-buildswap.feedback.cannotVote.spectator=Spectators aren't allowed to vote!
-buildswap.feedback.cannotVote.side=You are not allowed to vote for this side!
-buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
-buildswap.feedback.foundPartner=§f We found you another partner!
-buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
-buildswap.game.start.aboutToBegin=§cWe are about to begin BuildSwap
-buildswap.game.start.themesAreRandom=§cAll themes are random
-buildswap.game.start.getReady=§cGet ready
-buildswap.game.start.yourTheme=§cYour theme is:
-buildswap.round.tie=§cIt's a tie!
-buildswap.round.won=§c%s won!
-buildswap.round.swap=§cSwap!
-buildswap.round.swap.force=§cI said swap!
-buildswap.round.build=§cBUILD!
-buildswap.round.secondsRemaining=seconds remaining
-buildswap.round.over=§cRound %s Over
-buildswap.game.end=§cGame ended!
-buildswap.voting.end=§cVoting finished!
-buildswap.voting.start=§c Hora de votar!
-buildswap.voting.start.info=§cClick any side to vote for it
+buildswap.opponentLeft=§fSeu oponente saiu do jogo!Estamos procurando um novo parceiro. Espere um pouco! 
+buildswap.feedback.cannotVote.spectator=Expectadores não podem votar! 
+buildswap.feedback.cannotVote.side=Você não pode votar para esse lado!
+buildswap.feedback.foundPartnerNoTransfer=§f Nós encontramos um outro parceiro!Infelizmente nós não conseguimos tranferir sua construção, então você recebeu a construção de um outro player.Já é alguma coisa!
+buildswap.feedback.foundPartner=§f Nós encontramos um outro parceiro para você!
+buildswap.feedback.opponentsLeft=§f Seu oponente(s) saiu, então você foi colocado em modo expectador.
+buildswap.game.start.aboutToBegin=§cNós estamos prestes a começar o BuildSwap.
+buildswap.game.start.themesAreRandom=§cTodos os temas são aleatórios.
+buildswap.game.start.getReady=§cSe prepare!
+buildswap.game.start.yourTheme=§cSeu tema é:
+buildswap.round.tie=§cÉ um empate!
+buildswap.round.won=§c%s venceu!
+buildswap.round.swap=§cTroque!
+buildswap.round.swap.force=§cEu disse troque!
+buildswap.round.build=§cCONSTRUA!
+buildswap.round.secondsRemaining=segundos restantes
+buildswap.round.over=§cRound %s terminou
+buildswap.game.end=§cJogo terminou!
+buildswap.voting.end=§cVotação terminou!
+buildswap.voting.start=§cHora de votar!
+buildswap.voting.start.info=§cClique em qualquer lado para votar para ele 
 
-buildswap.scoreboard.currentTheme=Current theme
-buildswap.scoreboard.generatingTheme=Generating...
-buildswap.scoreboard.timeRemaining=Time remaining
-buildswap.scoreboard.swap=Swap to the other side!
-buildswap.scoreboard.hurry=Hurry!
+buildswap.scoreboard.currentTheme=Tema atual 
+buildswap.scoreboard.generatingTheme=Gerando...
+buildswap.scoreboard.timeRemaining=Tempo restante
+buildswap.scoreboard.swap=Troque para o outro lado!
+buildswap.scoreboard.hurry=Se apresse!
 
-theme.angel=An angel
-theme.axe=An axe
-theme.baby=A baby
+theme.angel=Um anjo
+theme.axe=Um machado 
+theme.baby=Um bebê 
 theme.grian=Grian
-theme.bee=A bee
-theme.bicycle=A bicycle
-theme.boat=A boat
-theme.heart=A heart
-theme.book=A book
-theme.boy=A boy
-theme.bread=A loaf of bread
-theme.bunny=A bunny
-theme.bus=A bus
-theme.butterfly=A butterfly
-theme.car=A car
-theme.castle=A castle
-theme.cat=A cat
-theme.chair=A chair
-theme.cheese=A cheese
-theme.chocolate=A piece of chocolate
-theme.clock=A clock
-theme.coffee=A cup of coffee
-theme.computer=A computer
-theme.cookie=A cookie
-theme.cow=A cow
-theme.creeper=A creeper
-theme.crocodile=A crocodile
-theme.cupcake=A cupcake
-theme.diamond=A diamond
-theme.dog=A dog
-theme.dolphin=A dolphin
-theme.donut=A donut
-theme.dragonfly=A dragonfly
-theme.egg=An egg
-theme.enderman=An enderman
-theme.firetruck=A firetruck
-theme.fireman=A fireman
-theme.fish=A fish
-theme.fridge=A fridge
-theme.furnace=A furnace
-theme.ghast=A ghast
-theme.giant=A giant
-theme.alien=An alien
-theme.girl=A girl
-theme.hotdog=A hotdog
-theme.house=A house
-theme.jar=A jar
-theme.jellyfish=A jellyfish
-theme.jukebox=A jukebox
-theme.key=A key
-theme.koala=A koala
-theme.lamb=A lamb
-theme.llama=A llama
-theme.mermaid=A mermaid
-theme.monkey=A monkey
-theme.mouse=A mouse
-theme.mushroom=A mushroom
-theme.painting=A painting
-theme.pan=A pan
-theme.panda=A panda
-theme.paper=A paper
-theme.penguin=A penguin
-theme.pizza=A pizza
-theme.planet=A planet
-theme.plate=A plate
-theme.policeman=A policeman
-theme.pony=A pony
-theme.potato=A potato
-theme.present=A present
-theme.radio=A radio
-theme.rusticHouse=A rustic house
-theme.scissors=A pair of scissors
-theme.shoe=A shoe
-theme.shovel=A shovel
-theme.skeleton=A skeleton
-theme.snake=A snake
-theme.snowflake=A snowflake
-theme.snowman=A snowman
-theme.spider=A spider
-theme.squid=A squid
-theme.star=A star
-theme.stone=A stone
-theme.stove=A stove
+theme.bee=Uma abelha
+theme.bicycle=Uma bicicleta 
+theme.boat=Um barco
+theme.heart=Um coração
+theme.book=Um livro
+theme.boy=Um menino
+theme.bread=Pão
+theme.bunny=Um coelho
+theme.bus=Um ônibus
+theme.butterfly=Uma borboleta
+theme.car=Um carro
+theme.castle=Um castelo
+theme.cat=Um gato
+theme.chair=Uma cadeira
+theme.cheese=Queijo
+theme.chocolate=Um pedaço de chocolate 
+theme.clock=Um relógio
+theme.coffee=Uma xícara de café
+theme.computer=Um computador
+theme.cookie=Um cookie
+theme.cow=Uma vaca
+theme.creeper=Um creeper
+theme.crocodile=Um crocodilo
+theme.cupcake=Um cupcake
+theme.diamond=Um diamante
+theme.dog=Um cachorro 
+theme.dolphin=Um golfinho
+theme.donut=Um donut
+theme.dragonfly=Uma libélula
+theme.egg=Um ovo
+theme.enderman=Um enderman
+theme.firetruck=Um caminhão de bombeiros
+theme.fireman=Um bombeiro 
+theme.fish=Um peixe
+theme.fridge=Uma geladeira 
+theme.furnace=Uma fornalha
+theme.ghast=Um ghast
+theme.giant=Um gigante
+theme.alien=Um alien
+theme.girl=Uma menina 
+theme.hotdog=Um cachorro-quente 
+theme.house=Uma casa
+theme.jar=Um pote
+theme.jellyfish=Uma água-viva 
+theme.jukebox=Uma jukebox
+theme.key=Uma chave
+theme.koala=Um coala 
+theme.lamb=Um carneiro
+theme.llama=Uma lhama
+theme.mermaid=Uma sereia
+theme.monkey=Um macaco
+theme.mouse=Um rato
+theme.mushroom=Um cogumelo
+theme.painting=Uma pintura
+theme.pan=Uma frigideira
+theme.panda=Um panda
+theme.paper=Um papel
+theme.penguin=Um pinguin
+theme.pizza=Uma pizza
+theme.planet=Um planeta
+theme.plate=Um prato
+theme.policeman=Um policial 
+theme.pony=Um pônei
+theme.potato=Uma batata 
+theme.present=Um presente
+theme.radio=Um rádio
+theme.rusticHouse=Uma casa rústica
+theme.scissors=Uma tesoura
+theme.shoe=Um sapato
+theme.shovel=Uma pá
+theme.skeleton=Um esqueleto
+theme.snake=Uma cobra 
+theme.snowflake=Um floco de neve 
+theme.snowman=Um boneco de neve 
+theme.spider=Uma aranha 
+theme.squid=Uma lula
+theme.star=Uma estrela
+theme.stone=Uma pedra
+theme.stove=Um fogão
 theme.sushi=Sushi
-theme.sword=A sword
-theme.train=A train
-theme.tree=A tree
-theme.truck=A truck
-theme.trumpet=A trumpet
-theme.turtle=A turtle
-theme.whale=A whale
-theme.witch=A witch
-theme.wizard=A wizard
-theme.zebra=A zebra
-theme.zombie=A zombie
-theme.oven=An oven
-theme.umbrella=An umbrella
-theme.unicorn=A unicorn
+theme.sword=Uma espada
+theme.train=Um trem
+theme.tree=Um árvore 
+theme.truck=Um caminhão 
+theme.trumpet=Uma trombeta
+theme.turtle=Uma tartaruga 
+theme.whale=Uma baleia 
+theme.witch=Uma bruxa
+theme.wizard=Um mágico 
+theme.zebra=Uma zebra
+theme.zombie=Um zombie
+theme.oven=Um forno
+theme.umbrella=Um guarda-chuva
+theme.unicorn=Um unicórnio
 
-theme2.babyBottle=holding a baby bottle
-theme2.balloon=with a balloon
-theme2.belt=wearing a belt
-theme2.book=with a book
-theme2.bottle=with a bottle
-theme2.candle=holding a candle
-theme2.cape=wearing a cape
-theme2.cookie=with a cookie
-theme2.earphones=wearing earphones
-theme2.earrings=wearing earrings
-theme2.rod=holding a fishing rod
-theme2.flag=with a flag
-theme2.flower=with a flower
-theme2.console=playing on a game console
-theme2.glass=with a glass
-theme2.hat=wearing a hat
-theme2.headphones=with headphones
-theme2.heaven=in heaven
-theme2.cream=with ice cream
-theme2.laptop=with a laptop
-theme2.microphone=singing into a microphone
-theme2.mug=with a mug
-theme2.necklace=wearing a necklace
-theme2.notebook=with a notebook
-theme2.npc-grian=with NPC-Grian
-theme2.phone=with a phone
-theme2.popcorn=holding popcorn
-theme2.puppy=cuddling a puppy
-theme2.purse=wearing a purse
-theme2.channels=changing channels
-theme2.tortoise=married to a tortoise
-theme2.rollerskates=on rollerskates
-theme2.sandwich=with a sandwich
-theme2.shoes=wearing shoes
-theme2.sombrero=wearing a sombrero
-theme2.sunglasses=wearing sunglasses
-theme2.sweater=wearing a sweater
-theme2.bear=holding a teddy bear
-theme2.teeth=with silly teeth
-theme2.television=and a television
-theme2.wings=wearing wings
-theme2.arms=with many arms
-theme2.dinosaur=holding a yellow dinosaur
+theme2.babyBottle=segurando uma mamadeira 
+theme2.balloon=com um balão 
+theme2.belt=vestindo um cinto
+theme2.book=com um livro 
+theme2.bottle=com uma garrafa
+theme2.candle=segurando uma vela
+theme2.cape=vestindo uma capa
+theme2.cookie=com a cookie
+theme2.earphones=com fones de ouvido
+theme2.earrings=usando brincos 
+theme2.rod=segurando uma vara de pescar
+theme2.flag=com uma bandeira
+theme2.flower=com uma flor
+theme2.console=jogando um jogo de console
+theme2.glass=com um copo
+theme2.hat=usando um chápeu 
+theme2.headphones=usando headphones
+theme2.heaven=no paraíso 
+theme2.cream=com um sorvete 
+theme2.laptop=com um laptop
+theme2.microphone=cantado em um microfone singing 
+theme2.mug=com uma caneca
+theme2.necklace=usando um colar
+theme2.notebook=com um caderno
+theme2.npc-grian=com um NPC-Grian
+theme2.phone=com um celular
+theme2.popcorn=segurando uma pipoca
+theme2.puppy=abraçando um cachorro
+theme2.purse=usando uma bolsa
+theme2.channels=trocando de canal
+theme2.tortoise=casado com um cágado
+theme2.rollerskates=de patins
+theme2.sandwich=com um sanduíche 
+theme2.shoes=usando sapatos
+theme2.sombrero=vestindo um sombrero
+theme2.sunglasses=usando óculos escuros
+theme2.sweater=vestindo um suéter
+theme2.bear=segurando um ursinho de pelúcia 
+theme2.teeth=com dentes engraçados
+theme2.television=e uma tevelisão
+theme2.wings=usando asas
+theme2.arms=com vários braços
+theme2.dinosaur=segurando um dinossauro amarelo
 
-theme3.teeth=brushing their teeth
-theme3.camping=camping
-theme3.crying=crying
-theme3.drinking=drinking
-theme3.driving=driving
-theme3.eating=eating
-theme3.fighting=fighting
-theme3.fishing=fishing
-theme3.school=going to school
-theme3.skating=ice skating
-theme3.radio=listening to the radio
-theme3.telescope=looking through a telescope
-theme3.phonecall=making a phonecall
-theme3.mining=mining
-theme3.painting=painting
-theme3.dog=petting a dog
-theme3.make-up=putting on make-up
-theme3.book=reading a book
-theme3.singing=singing
-theme3.class=sitting in class
-theme3.sleeping=sleeping
-theme3.walking=walking
-theme3.waving=waving
-theme3.writing=writing
-theme3.dancing=dancing
-theme3.hill=rolling down a hill
-theme3.kitchen=in the kitchen
-theme3.laughing=laughing
-theme3.magic=performing magic
-theme3.internet=browsing the internet
-theme3.disasters=playing Disasters
-theme3.house=building a rustic house
-theme3.video=making a video
-theme3.potatoes=growing potatoes
-theme3.inventing=inventing
-theme3.science=performing science
-theme3.potions=brewing potions
-theme3.hair=brushing their hair
-theme3.trees=painting happy little trees
+theme3.teeth=escovando os dentes
+theme3.camping=acampando
+theme3.crying=chorando
+theme3.drinking=bebendo
+theme3.driving=dirigindo
+theme3.eating=comendo
+theme3.fighting=brigando
+theme3.fishing=pescando
+theme3.school=indo para a escola
+theme3.skating=patinando no gelo
+theme3.radio=ouvindo ao rádio
+theme3.telescope=olhando por um telescópio 
+theme3.phonecall=fazer uma ligação de telefone
+theme3.mining=minerando 
+theme3.painting=pintando
+theme3.dog=fazendo carinho em um cachorro
+theme3.make-up=passando maquiagem
+theme3.book=lendo um livro
+theme3.singing=cantando
+theme3.class=sentando na aula
+theme3.sleeping=dormindo
+theme3.walking=andando
+theme3.waving=acenando
+theme3.writing=escrevendo
+theme3.dancing=dançando
+theme3.hill=rolando morro abaixo
+theme3.kitchen=na cozinha
+theme3.laughing=rindo
+theme3.magic=fazendo mágica
+theme3.internet=navegando na internet
+theme3.disasters=jogando Disasters
+theme3.house=construindo uma casa rústrica
+theme3.video=gravando um vídeo
+theme3.potatoes=plantando batatas
+theme3.inventing=inventando
+theme3.science=fazendo ciência
+theme3.potions=fervendo poções
+theme3.hair=escovando o cabelo
+theme3.trees=pintando pequenas árvores felizes 
