--- a/BuildSwap/pt_br.properties
+++ b/BuildSwap/pt_br.properties
@@ -5,6 +5,7 @@ language.code=pt_br
 buildswap.opponentLeft=§fSeu oponente saiu do jogo!Estamos procurando um novo parceiro. Espere um pouco! 
 buildswap.feedback.cannotVote.spectator=Expectadores não podem votar! 
 buildswap.feedback.cannotVote.side=Você não pode votar para esse lado!
+buildswap.feedback.voted=Votado!
 buildswap.feedback.foundPartnerNoTransfer=§f Nós encontramos um outro parceiro!Infelizmente nós não conseguimos tranferir sua construção, então você recebeu a construção de um outro player.Já é alguma coisa!
 buildswap.feedback.foundPartner=§f Nós encontramos um outro parceiro para você!
 buildswap.feedback.opponentsLeft=§f Seu oponente(s) saiu, então você foi colocado em modo expectador.
