--- a/pt_br.properties
+++ b/pt_br.properties
@@ -8,7 +8,7 @@ feedback.success=§6Sucesso!
 feedback.empty=§r
 feedback.only.players=§cApenas jogadores podem usar esse comando!
 feedback.noPermission=§cVocê não tem permissão para fazer isso!
-feedback.command.notAllowed=§cVocê não tem permissão para executar esse comando!
+feedback.command.notAllowed=§c Você não tem permissão para executar esse comando!
 feedback.unknownPlayer=§cJogador desconhecido!
 feedback.sending.to.server=§9[Games]§f Enviando você para %s.
 feedback.usage=§6Usage:
@@ -28,7 +28,6 @@ feedback.word.emeralds=Emeralds
 feedback.word.win=Win
 feedback.word.tie=Tie
 feedback.word.voted=Voted
-feedback.word.voted.exclamation=Voted!
 feedback.word.ago=ago
 feedback.word.rewardSummary=Reward Summary
 feedback.word.gameEnded=The game has ended!
@@ -64,4 +63,6 @@ gui.button.word.set=§6Set
 game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
-game.compass.usage=§fClick with the compass to spectate the players.
+game.compass.usage=§f Click with the compass to spectate the players.
+
+game.scoreboard.playingOn=You're playing on
